--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/style-resources": "^1.0.0",
     "nuxt": "^2.0.0",
-    "vue-yandex-maps": "^0.10.6"
+    "vue-yandex-maps": "^0.10.6",
+    "vue-yandex-metrika": "^1.8.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
