--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/style-resources": "^1.0.0",
+    "@nuxtjs/yandex-metrika": "^1.0.3",
     "nuxt": "^2.0.0",
-    "vue-yandex-maps": "^0.10.6",
-    "vue-yandex-metrika": "^1.8.3"
+    "vue-yandex-maps": "^0.10.6"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
