--- a/package.json
+++ b/package.json
@@ -16,14 +16,10 @@
     "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/yandex-metrika": "^1.0.3",
     "nuxt": "^2.0.0",
+    "nuxt-compress": "^2.0.0",
     "vue-yandex-maps": "^0.10.6"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^1.0.1",
-    "@nuxtjs/eslint-module": "^1.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^6.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2"
   }
