--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@nuxtjs/yandex-metrika": "^1.0.3",
     "nuxt": "^2.0.0",
     "nuxt-compress": "^2.0.0",
-    "vue-yandex-maps": "^0.10.6"
+    "vue-the-mask": "^0.11.1",
+    "vue-yandex-maps": "^0.10.6",
+    "vuelidate": "^0.7.5"
   },
   "devDependencies": {
     "node-sass": "^4.13.1",
